--- a/application/src/app/components/documents/document.positions.component.html
+++ b/application/src/app/components/documents/document.positions.component.html
@@ -36,7 +36,7 @@
             <td colspan="4">Razem:</td>
             <td>{{ document.netto | number : '1.2-2'}}</td>
             <td>{{ document.vat }}%</td>
-            <td>{{ document.vat_sum | number : '1.2-2'}}</td>
+            <td>{{ document.vatSum | number : '1.2-2'}}</td>
             <td>{{ document.brutto | number : '1.2-2'}}</td>
             <td class="collapsing"></td>
         </tr>
