--- a/application/src/app/components/documents/documents.component.html
+++ b/application/src/app/components/documents/documents.component.html
@@ -71,10 +71,10 @@
       <td><a [routerLink]="['/documents', document.id]">{{ document.number }}</a></td>
       <td>{{ document.type }}</td>
       <td>{{ document.date | date: 'dd/MM/yyyy'  }}</td>
-      <td>{{ document.date_of_payment | date: 'dd/MM/yyyy' }}</td>
-      <td>{{ document.payment_method }}</td>
+      <td>{{ document.dateOfPayment | date: 'dd/MM/yyyy' }}</td>
+      <td>{{ document.paymentMethod }}</td>
       <td>{{document.paid ? "Tak" : "Nie"}}</td>
-      <td>{{ document.consumer.name }}</td>
+      <td><a [routerLink]="['/consumers', document.consumerId]">{{ document.consumerName }}</a></td>
     </tr>
 
   </tbody>
