--- a/application/src/app/components/consumers/consumers.component.html
+++ b/application/src/app/components/consumers/consumers.component.html
@@ -1,92 +1,93 @@
 <div style="overflow: hidden">
-
-<div class="ui search" style="float: right">
-    <i class="remove icon remove-search" *ngIf="isSearch()" (click)="clearSearch()"></i>
-  <div class="ui icon input">
-    <input class="prompt" [(ngModel)]="search" (keyup)="searchConsumers()" type="text" placeholder="Szukaj...">
-    <i class="search icon" *ngIf="!isSearch()"></i>
-  </div>
-  <div class="results"></div>
+    <div class="ui search" style="float: right">
+        <i class="remove icon remove-search" *ngIf="isSearch()" (click)="clearSearch()"></i>
+        <div class="ui icon input">
+            <input class="prompt" [(ngModel)]="search" (keyup)="searchConsumers()" type="text" placeholder="Szukaj...">
+            <i class="search icon" *ngIf="!isSearch()"></i>
+        </div>
+        <div class="results"></div>
+    </div>
 </div>
-
-</div>
-
 <table class="ui celled table selectable">
-  <thead>
-    <tr>
-    <th>
-      <div class="ui fitted checkbox">
-          <input type="checkbox" (change)="allDelete()" [checked]="isAllChecked()"> <label></label>
-        </div>
-    </th>
-    <th (click)="sortingBy('name')">Nazwa 
-        <i class="sort icon" *ngIf="order('name')==''"></i>
-        <i class="sort descending icon" *ngIf="order('name')=='DESC'"></i>
-        <i class="sort ascending icon" *ngIf="order('name')=='ASC'"></i>
-    </th>
-    <th (click)="sortingBy('nameSurname')">Imie i Nazwisko
-        <i class="sort icon" *ngIf="order('nameSurname')==''"></i>
-        <i class="sort descending icon" *ngIf="order('nameSurname')=='DESC'"></i>
-        <i class="sort ascending icon" *ngIf="order('nameSurname')=='ASC'"></i>
-    </th>
-    <th (click)="sortingBy('company')">Nazwa firmy
-        <i class="sort icon" *ngIf="order('company')==''"></i>
-        <i class="sort descending icon" *ngIf="order('company')=='DESC'"></i>
-        <i class="sort ascending icon" *ngIf="order('company')=='ASC'"></i>
-    </th>
-    <th (click)="sortingBy('phone')">Telefon
-        <i class="sort icon" *ngIf="order('phone')==''"></i>
-        <i class="sort descending icon" *ngIf="order('phone')=='DESC'"></i>
-        <i class="sort ascending icon" *ngIf="order('phone')=='ASC'"></i>
-    </th>
-    <th (click)="sortingBy('email')">Email
-    <i class="sort icon" *ngIf="order('email')==''"></i>
-        <i class="sort descending icon" *ngIf="order('email')=='DESC'"></i>
-        <i class="sort ascending icon" *ngIf="order('email')=='ASC'"></i>
-    </th>
-  </tr></thead>
-  <tbody *ngIf="isReturn()">
-    <tr *ngFor="let consumer of consumers">
-    <td class="collapsing">
-        <div class="ui fitted checkbox">
-          <input type="checkbox" (change)="addDelete(consumer.id)" [checked]="isCheck(consumer.id)"> <label></label>
-        </div>
-      </td>
-      <td><a [routerLink]="['/consumers', consumer.id]">{{ consumer?.name }}</a></td>
-      <td>{{ consumer?.first_name }} {{ consumer?.last_name }}</td>
-      <td>{{ consumer?.company }}</td>
-      <td>{{ consumer?.phone }}</td>
-      <td>{{ consumer?.email }}</td>
-    </tr>
-
-  </tbody>
-  <tbody *ngIf="!isReturn()">
-    <tr>
-        <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
-            Nie znaleziono
-        </td>
-    </tr>
-</tbody>
-  <tfoot>
-    <tr><th colspan="8">
-        <button class="ui  red labeled icon button" [disabled]="isDelete()" (click)="deleteChecked()">
-          <i class="trash icon"></i> Usuń
-        </button>
-      <div class="ui right floated pagination menu small">
-        <a class="icon item">
-          <i class="left chevron icon"></i>
-        </a>
-        <a class="item">1</a>
-        <a class="item">2</a>
-        <a class="item">3</a>
-        <a class="item">4</a>
-        <a class="icon item">
-          <i class="right chevron icon"></i>
-        </a>
-      </div>
-    </th>
-  </tr></tfoot>
+    <thead>
+        <tr>
+            <th>
+                <div class="ui fitted checkbox">
+                    <input type="checkbox" (change)="allDelete()" [checked]="isAllChecked()">
+                    <label></label>
+                </div>
+            </th>
+            <th (click)="sortingBy('name')">Nazwa
+                <i class="sort icon" *ngIf="order('name')==''"></i>
+                <i class="sort descending icon" *ngIf="order('name')=='DESC'"></i>
+                <i class="sort ascending icon" *ngIf="order('name')=='ASC'"></i>
+            </th>
+            <th (click)="sortingBy('nameSurname')">Imie i Nazwisko
+                <i class="sort icon" *ngIf="order('nameSurname')==''"></i>
+                <i class="sort descending icon" *ngIf="order('nameSurname')=='DESC'"></i>
+                <i class="sort ascending icon" *ngIf="order('nameSurname')=='ASC'"></i>
+            </th>
+            <th (click)="sortingBy('company')">Nazwa firmy
+                <i class="sort icon" *ngIf="order('company')==''"></i>
+                <i class="sort descending icon" *ngIf="order('company')=='DESC'"></i>
+                <i class="sort ascending icon" *ngIf="order('company')=='ASC'"></i>
+            </th>
+            <th (click)="sortingBy('phone')">Telefon
+                <i class="sort icon" *ngIf="order('phone')==''"></i>
+                <i class="sort descending icon" *ngIf="order('phone')=='DESC'"></i>
+                <i class="sort ascending icon" *ngIf="order('phone')=='ASC'"></i>
+            </th>
+            <th (click)="sortingBy('email')">Email
+                <i class="sort icon" *ngIf="order('email')==''"></i>
+                <i class="sort descending icon" *ngIf="order('email')=='DESC'"></i>
+                <i class="sort ascending icon" *ngIf="order('email')=='ASC'"></i>
+            </th>
+        </tr>
+    </thead>
+    <tbody *ngIf="isReturn()">
+        <tr *ngFor="let consumer of consumers">
+            <td class="collapsing">
+                <div class="ui fitted checkbox">
+                    <input type="checkbox" (change)="addDelete(consumer.id)" [checked]="isCheck(consumer.id)">
+                    <label></label>
+                </div>
+            </td>
+            <td><a [routerLink]="['/consumers', consumer.id]">{{ consumer?.name }}</a></td>
+            <td>{{ consumer?.first_name }} {{ consumer?.last_name }}</td>
+            <td>{{ consumer?.company }}</td>
+            <td>{{ consumer?.phone }}</td>
+            <td>{{ consumer?.email }}</td>
+        </tr>
+    </tbody>
+    <tbody *ngIf="!isReturn()">
+        <tr>
+            <td colspan="8" class="ui center aligned" style="font-size: 20px; color: #ccc;">
+                Nie znaleziono
+            </td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <th colspan="8">
+                <button class="ui  red labeled icon button" [disabled]="isDelete()" (click)="deleteChecked()">
+                    <i class="trash icon"></i> Usuń
+                </button>
+                <div class="ui right floated pagination menu small">
+                    <a class="icon item">
+                        <i class="left chevron icon"></i>
+                    </a>
+                    <a class="item">1</a>
+                    <a class="item">2</a>
+                    <a class="item">3</a>
+                    <a class="item">4</a>
+                    <a class="icon item">
+                        <i class="right chevron icon"></i>
+                    </a>
+                </div>
+            </th>
+        </tr>
+    </tfoot>
 </table>
 <div class="ui green labeled icon button">
-          <i class="user icon"></i> Nowy klient
-        </div>
+    <i class="user icon"></i> Nowy klient
+</div>
