--- a/application/src/app/components/documents/document.component.html
+++ b/application/src/app/components/documents/document.component.html
@@ -3,19 +3,24 @@
         <div class="ui segment">
             <h2 class="ui horizontal divider header">{{ document.number }}</h2>
             <div class="ui right floated icon button mini"><i class="write icon"></i></div>
-            <b>Wystawiono:</b> {{ document.date | date: 'dd/MM/yyyy'  }}<br>
-            <b>Data płatności:</b> {{ document.dateOfPayment | date: 'dd/MM/yyyy'  }}<br>
-            <b>Metoda płatności:</b> {{ document.paymentMethod }}<br>
-            <b>Zapłacono:</b> {{document.paid ? "Tak" : "Nie"}}<br>
+            <b>Wystawiono:</b> {{ document.date | date: 'dd/MM/yyyy' }}
+            <br>
+            <b>Data płatności:</b> {{ document.dateOfPayment | date: 'dd/MM/yyyy' }}
+            <br>
+            <b>Metoda płatności:</b> {{ document.paymentMethod }}
+            <br>
+            <b>Zapłacono:</b> {{document.paid ? "Tak" : "Nie"}}
+            <br>
         </div>
         <div class="ui segment">
             <h3 class="ui horizontal divider header">Sprzedawca</h3>
             <p>
-                Warsztat<br>
-                Street, 6 /12<br>
-                00-000<br>
-                Warszawa<br>
-                000-000-00-00<br>
+                Warsztat
+                <br> Street, 6 /12
+                <br> 00-000
+                <br> Warszawa
+                <br> 000-000-00-00
+                <br>
             </p>
         </div>
         <div class="ui segment">
@@ -23,7 +28,6 @@
             <document-consumer [consumerId]=consumerId></document-consumer>
         </div>
     </div>
-
     <div class="twelve wide column">
         <document-positions [id]=id [document]=document></document-positions>
     </div>
