--- a/application/src/app/components/documents/document.consumer.component.html
+++ b/application/src/app/components/documents/document.consumer.component.html
@@ -1,17 +1,20 @@
 <div *ngIf="!isSearchView()">
-<div class="ui right floated icon button mini" (click)="searchView()"><i class="write icon"></i></div>
-<p>
-    {{consumer.name}}<br>
-    <span *ngIf="consumer.street">{{consumer.street}}
+    <div class="ui right floated icon button mini" (click)="searchView()"><i class="write icon"></i></div>
+    <p>
+        {{consumer.name}}
+        <br>
+        <span *ngIf="consumer.street">{{consumer.street}}
         <span *ngIf="consumer.build_number">, {{consumer.build_number}}</span>
         <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
-    </span><br>
-    <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
-    <span *ngIf="consumer.place">{{consumer.place}}</span><br>
-    <span *ngIf="consumer.nip">{{consumer.nip}}</span><br>
-</p>
+        </span>
+        <br>
+        <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
+        <span *ngIf="consumer.place">{{consumer.place}}</span>
+        <br>
+        <span *ngIf="consumer.nip">{{consumer.nip}}</span>
+        <br>
+    </p>
 </div>
-
 <div *ngIf="isSearchView()">
     <div class="ui right floated icon button mini" (click)="cancel()"><i class="remove icon"></i></div>
     <div class="ui small icon input loading">
@@ -22,14 +25,18 @@
     <div class="consumers-list" *ngIf="isResponse()">
         <div *ngFor="let consumer of consumers">
             <p class="consumers-list-item" (click)="apply(consumer.id)">
-                {{consumer.name}}<br>
+                {{consumer.name}}
+                <br>
                 <span *ngIf="consumer.street">{{consumer.street}}
                     <span *ngIf="consumer.build_number">, {{consumer.build_number}}</span>
-                    <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
-                </span><br>
+                <span *ngIf="consumer.apartment_number">/{{consumer.apartment_number}}</span>
+                </span>
+                <br>
                 <span *ngIf="consumer.postal_code">{{consumer.postal_code}} </span>
-                <span *ngIf="consumer.place">{{consumer.place}}</span><br>
-                <span *ngIf="consumer.nip">{{consumer.nip}}</span><br>
+                <span *ngIf="consumer.place">{{consumer.place}}</span>
+                <br>
+                <span *ngIf="consumer.nip">{{consumer.nip}}</span>
+                <br>
             </p>
             <div class="ui divider"></div>
         </div>
