Add document view

--- a/application/src/app/components/documents/documents.component.html
+++ b/application/src/app/components/documents/documents.component.html
@@ -108,6 +108,6 @@
         </tr>
     </tfoot>
 </table>
-<button class="ui green labeled icon button" [routerLink]="['/document/add']">
+<button class="ui green labeled icon button" [routerLink]="['/documents/add']">
     <i class="file outline icon"></i> Nowy dokument
 </button>
