--- a/application/src/app/components/documents/document.component.html
+++ b/application/src/app/components/documents/document.component.html
@@ -9,7 +9,9 @@
             <br>
             <b>Metoda płatności:</b> {{ document.paymentMethod }}
             <br>
-            <b>Zapłacono:</b> {{document.paid ? "Tak" : "Nie"}}
+            <b>Zapłacono:</b> {{ document.paid ? "Tak" : "Nie" }}
+            <br>
+            <b>Miejsce:</b> {{ document.place }}
             <br>
         </div>
         <div class="ui segment">
