--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -83,6 +83,34 @@
     cursor: pointer;
 }
 
+.small-value input {
+    width: 80px;
+}
+
+.hints-list{
+    list-style: none;
+    margin: 0!important;
+    padding: 0!important;
+    box-shadow: none!important;
+    position: absolute!important;
+    z-index: 100;
+}
+
+.hints-list li{
+    padding: 10px 20px 10px 20px;
+    border-bottom: 1px solid #ccc;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.hints-list li:last-child{
+    border: none;
+}
+
+.hints-list li:hover{
+    background-color: rgba(0,0,0,.05)!important;
+}
+
 ::-webkit-scrollbar {
     width: 4px;
     /* for vertical scrollbars */
