--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -89,18 +89,27 @@
 
 .hints-list{
     list-style: none;
-    margin: 0!important;
-    padding: 0!important;
-    box-shadow: none!important;
-    position: absolute!important;
+    margin: 0;
+    padding: 0;
+    position: absolute;
     z-index: 100;
+    border: solid 1px #ccc;
+    background-color: #fff;
+    border-radius: 4px;
+    margin-top: 37px;
+    max-height: 120px;
+    overflow-y: scroll;
+    overflow-x: auto;
 }
 
 .hints-list li{
     padding: 10px 20px 10px 20px;
-    border-bottom: 1px solid #ccc;
+    color: #666;
     overflow: hidden;
     cursor: pointer;
+    max-width: 400px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .hints-list li:last-child{
